# latextools

./: .gitignore  README.md  pyproject.toml
docs/: authtex.md  latexport.md
latextools/: __init__.py  authmanage.py  authtex.py  latexport.py  utils.py
latextools/styles/: aa.yaml  aastex6.yaml  aastex7.yaml  mnras.yaml  raa.yaml  sn-jnl.yaml
templates/: authors-template.yaml  style_template.yaml
tests/: aastex631.tex  aastex7.tex  mnras.tex  test.py
